--- a/content/assignment/02-lab.html
+++ b/content/assignment/02-lab.html
@@ -30,7 +30,7 @@ a file!</p>
 <h2>Step 1: For the project in your repo</h2>
 <p>Not a term/command actually available in Git, forking is a feature available in
 Github (as in other services) that allows users to create copies of other people’s
-projects to propose changes (i.e. make <strong>pull requests</strong>, i.e. “I have this
+projects to propose changes (i.e. make <strong>pull requests</strong>, i.e. “I have this
 great update to your project! Would you like to add it by <em>pulling it</em> into your
 repo?”).</p>
 <p>To start you just need to use the Fork button available on the project you would
@@ -77,7 +77,7 @@ do:</p>
 <ol style="list-style-type: decimal">
 <li><p>Find the line with your name/student id number.</p></li>
 <li><p>In that single line (i.e. not spanning multiple lines), write something about
-yourself, e.g. “I am from XYZ, I love doing ABC, …”.</p></li>
+yourself, e.g. “I am from XYZ, I love doing ABC, …”.</p></li>
 <li><p>(optional) if you feel like it, add at the beginning of the line a picture
 of yourself (or avatar) using either html or markdown. This will require you
 to include the figure in the repo (if you are not linking a web fig).</p></li>
@@ -197,11 +197,11 @@ And you are done!
 <ol>
 <li id="fn1"><p>Team-members could be working on the same file but editing
 different lines of code. If this is the case, after pull/push, git will integrate
-the changes without conflicts.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
-<li id="fn2"><p>For more details, take a look at the <a href="https://guides.github.com/activities/forking/">Forking Projects</a> article in GitHub guides.<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
+the changes without conflicts.<a href="#fnref1" class="footnote-back">↩</a></p></li>
+<li id="fn2"><p>For more details, take a look at the <a href="https://guides.github.com/activities/forking/">Forking Projects</a> article in GitHub guides.<a href="#fnref2" class="footnote-back">↩</a></p></li>
 <li id="fn3"><p>More info about how to deal with conflicts in this very neat
 post on stackoverflow.com <a href="https://stackoverflow.com/questions/161813/how-to-resolve-merge-conflicts-in-git?page=1&amp;tab=votes#tab-top">How to resolve merge conflicts in Git</a>.
 GitHub also has a way to solve conflicts in PRs, but this is only available to
-the admins of target repo. More info <a href="https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/resolving-a-merge-conflict-on-github">here</a>,<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
+the admins of target repo. More info <a href="https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/resolving-a-merge-conflict-on-github">here</a>,<a href="#fnref3" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
