--- a/content/class/11-class.html
+++ b/content/class/11-class.html
@@ -21,17 +21,16 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p>To be announced</p>
+<p><a href="/assignment/11-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p>To be announced</p>
+<p><a href="/slides/11-interactive-viz/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
