Adding week 12 links and others

--- a/content/class/13-class.html
+++ b/content/class/13-class.html
@@ -1,6 +1,6 @@
 ---
-title: "Interactive visualization and effective data communication II"
-linktitle: "13: Interactive Visualization II"
+title: "Invited speakers and review presentations"
+linktitle: "13: Invited speakers and review presentations"
 date: "2020-11-11"
 class_date: "2020-11-11"
 citeproc: false
@@ -21,7 +21,6 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
