--- a/content/reading/11-reading.html
+++ b/content/reading/11-reading.html
@@ -1,3 +1,11 @@
+---
+title: "Interactive visualization and effective data communication I"
+date: "2020-10-28"
+citeproc: false
+bibliography: ../../static/bib/references.bib
+csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
+---
+
 
 
 <div id="required-reading" class="section level1">
@@ -44,7 +52,8 @@
 <ul>
 <li>For a helpful tutorial on creating a website using rmarkdown, see: <a href="https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html">Creating websites in R</a>, Emily C. Zabor<br />
 </li>
-<li>For more advanced website creation using <strong>blogdown</strong> and the website generators <strong>Hugo</strong> and **Jeckyll see <a href="https://bookdown.org/yihui/blogdown/">Creating websites with R Markdown</a>. <a href="https://bookdown.org/yihui/blogdown/website-basics.html#website-basics">Appendix B</a> presents basic information about websites, such as HTML, CSS, and JavaScript.</li>
+<li>For more advanced website creation using <strong>blogdown</strong> and the website generator Hugo see <a href="https://bookdown.org/yihui/blogdown/">Creating websites with R Markdown</a>.</li>
+<li><a href="https://bookdown.org/yihui/blogdown/website-basics.html#website-basics">Appendix B</a> of the <strong>blogdown</strong> book presents basic information about websites, such as HTML, CSS, and JavaScript.</li>
 </ul>
 </div>
 <div id="data-visualization-best-practices" class="section level2">
