--- a/content/class/12-class.html
+++ b/content/class/12-class.html
@@ -1,6 +1,6 @@
 ---
-title: "Final project workshop: review project progress, preliminary presentations"
-linktitle: "12: Final project"
+title: "Interactive visualization and effective data communication II"
+linktitle: "11: Interactive Visualization II"
 date: "2020-11-04"
 class_date: "2020-11-04"
 citeproc: false
@@ -21,17 +21,16 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p>To be announced</p>
+<p><a href="/assignment/12-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p>To be announced</p>
+<p><a href="/slides/12-interactive-viz2/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
