Adding Abigail @abigailhorn

--- a/public/assignment/03-lab/index.html
+++ b/public/assignment/03-lab/index.html
@@ -1019,7 +1019,7 @@ Summarize any trends that you see in these time series plots.</p>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
