--- a/public/assignment/05-hw2/index.html
+++ b/public/assignment/05-hw2/index.html
@@ -689,7 +689,7 @@ Create the following figures and interpret them. Be sure to include easily under
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
