--- a/public/assignment/06-lab/index.html
+++ b/public/assignment/06-lab/index.html
@@ -717,7 +717,7 @@ If you don’t already have <code>tidytext</code> then you can install with</p>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
