--- a/public/assignment/08-midterm/index.html
+++ b/public/assignment/08-midterm/index.html
@@ -643,7 +643,7 @@ The first step in any data analysis is to have a dataset for which you have form
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
