--- a/public/assignment/09-hw3/index.html
+++ b/public/assignment/09-hw3/index.html
@@ -666,7 +666,7 @@ The learning objectives are to conduct data scraping and perform text mining.
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
