--- a/public/assignment/11-lab-answers/index.html
+++ b/public/assignment/11-lab-answers/index.html
@@ -1109,7 +1109,7 @@ subplot(fig_May1, fig_Today)</code></pre>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
