--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -723,7 +723,7 @@ The objective of the lab is to examine the association between monthly average d
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt, Abigail Horn</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
