--- a/public/class/07-class/index.html
+++ b/public/class/07-class/index.html
@@ -619,7 +619,7 @@ that will be featured in the class.</p>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
