--- a/public/reading/02-reading/index.html
+++ b/public/reading/02-reading/index.html
@@ -661,7 +661,7 @@ a more technical overview of what’s git and what happens under-the-hood.</li>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
