--- a/public/reading/05-reading/index.html
+++ b/public/reading/05-reading/index.html
@@ -661,7 +661,7 @@ jupyter <a href="https://jupyter.org/install">here</a>.</p></li>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
