--- a/public/reading/07-reading/index.html
+++ b/public/reading/07-reading/index.html
@@ -657,7 +657,7 @@ package, which we will be using) (<a href="https://r4ds.had.co.nz/strings.html">
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
