--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -835,7 +835,7 @@ Provides overall safety to USC community. <a href="http://dps.usc.edu" class="ur
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
