--- a/public/assignment/01-lab/index.html
+++ b/public/assignment/01-lab/index.html
@@ -820,7 +820,7 @@ library(datasauRus)</code></pre>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
