--- a/public/assignment/02-lab/index.html
+++ b/public/assignment/02-lab/index.html
@@ -835,7 +835,7 @@ the admins of target repo. More info <a href="https://help.github.com/en/github/
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
