--- a/public/assignment/04-lab/index.html
+++ b/public/assignment/04-lab/index.html
@@ -837,7 +837,7 @@ filter(!(region %in% NA)) %&gt;%
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
