--- a/public/assignment/05-lab/index.html
+++ b/public/assignment/05-lab/index.html
@@ -763,7 +763,7 @@ stations &lt;- stations[n == 1,][, n := NULL]</code></pre>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
