--- a/public/assignment/11-hw4/index.html
+++ b/public/assignment/11-hw4/index.html
@@ -763,7 +763,7 @@ dbWriteTable(con, &quot;category&quot;, category)</code></pre>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
