--- a/public/index.html
+++ b/public/index.html
@@ -601,7 +601,7 @@
         <h3>Instructor</h3>
 
         <ul class="icon-list">
-            <li><i class="fas fa-user"></i> <a> Meredith Franklin, George Vega-Yon, Emil Hvitfeldt, Abigail Horn</a></li>
+            <li><i class="fas fa-user"></i> <a> Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a></li>
             <li><i class="fas fa-university"></i> SSB 202A</li>
             <li><i class="fas fa-envelope"></i> <a href="mailto:meredith.franklin@usc.edu"> meredith.franklin@usc.edu</a></li>
         </ul>
@@ -719,7 +719,7 @@
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
