--- a/public/reading/01-reading/index.html
+++ b/public/reading/01-reading/index.html
@@ -658,7 +658,7 @@ The “How to read an R help page” section stops once you reach “A.1.2 The b
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega-Yon, Emil Hvitfeldt</a>
+                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
             </p>
             <p>
                 <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
