--- a/schedule/index.html
+++ b/schedule/index.html
@@ -521,9 +521,9 @@
             <td align="right" style="width:20%;text-align:right">Week 1 (8/19)</td>
             <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Markdown, Git, command line tools</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/01-reading/">
+                    href="../reading/01-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/01-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/01-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -534,9 +534,9 @@
             <td align="right" style="width:20%;text-align:right">Week 2 (8/26)</td>
             <td style="width:50%;text-align:left">Version Control &amp; Reproducible Research</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/02-reading/">
+                    href="../reading/02-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/02-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/02-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -547,9 +547,9 @@
             <td align="right" style="width:20%;text-align:right">Week 3 (9/2)</td>
             <td style="width:50%;text-align:left">Exploratory data analysis</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/03-reading/">
+                    href="../reading/03-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/03-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/03-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -560,21 +560,21 @@
             <td align="right" style="width:20%;text-align:right">Week 4 (9/9)</td>
             <td style="width:50%;text-align:left">Data visualization</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/04-reading/">
+                    href="../reading/04-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/04-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/04-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/03-hw1/">
+                    href="../assignment/03-hw1/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 5 (9/16)</td>
             <td style="width:50%;text-align:left">Data cleaning and wrangling</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/05-reading/">
+                    href="../reading/05-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/05-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/05-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -585,21 +585,21 @@
             <td align="right" style="width:20%;text-align:right">Week 6 (9/23)</td>
             <td style="width:50%;text-align:left">Text Mining</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/06-reading/">
+                    href="../reading/06-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/06-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/06-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/05-hw2/">
+                    href="../assignment/05-hw2/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 7 (9/30)</td>
             <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/07-reading/">
+                    href="../reading/07-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/07-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/07-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -618,28 +618,28 @@
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
             </td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/08-midterm/">
+                    href="../assignment/08-midterm/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 9 (10/14)</td>
             <td style="width:50%;text-align:left">High performance computing, cloud computing</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/09-reading/">
+                    href="../reading/09-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/09-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/09-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/09-hw3/">
+                    href="../assignment/09-hw3/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 10 (10/21)</td>
             <td style="width:50%;text-align:left">Managing big data, SQL and non-SQL languages, Google BigQuery</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/10-reading/">
+                    href="../reading/10-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/10-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/10-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -650,9 +650,9 @@
             <td align="right" style="width:20%;text-align:right">Week 11 (10/28)</td>
             <td style="width:50%;text-align:left">Interactive visualization and effective data communication I</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/11-reading/">
+                    href="../reading/11-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/11-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/11-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -663,36 +663,36 @@
             <td align="right" style="width:20%;text-align:right">Week 12 (11/4)</td>
             <td style="width:50%;text-align:left">Interactive visualization and effective data communication II</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/12-reading/">
+                    href="../reading/12-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/12-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/12-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/11-hw4/">
+                    href="../assignment/11-hw4/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 13 (11/11)</td>
             <td style="width:50%;text-align:left">Final project workshop: review project progress, preliminary presentations</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/13-reading/">
+                    href="../reading/13-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/13-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/13-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/13-hw5/">
+                    href="../assignment/13-hw5/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 14 (11/18)</td>
             <td style="width:50%;text-align:left">Final Project</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/reading/14-reading/">
+                    href="../reading/14-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="/class/14-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/14-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="/assignment/14-final/">
+                    href="../assignment/14-final/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
 
