deploy: 9102673a2b3ab16aea320e6e78c05aae6fe45991

--- a/reading/04-reading/index.html
+++ b/reading/04-reading/index.html
@@ -640,15 +640,15 @@
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
             </p>
             <p>
-                <a href="https://preventivemedicine.usc.edu/" target="_blank" rel="noopener">Department of Preventive Medicine</a>
+                <a href="https://pphs.usc.edu/" target="_blank" rel="noopener">Department of Population and Public Health Sciences</a>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn</a>
+                    George Vega Yon, Kim Siegmund, Abigail Horn</a>
             </p>
             <p>
-                <a href="mailto:meredith.franklin@usc.edu"><i class="fas fa-envelope"></i>
-                    meredith.franklin@usc.edu</a>
+                <a href="mailto:vegayon@usc.edu"><i class="fas fa-envelope"></i>
+                    vegayon@usc.edu</a>
             </p>
         </div>
 
