--- a/website/content/class/04-class.html
+++ b/website/content/class/04-class.html
@@ -26,11 +26,11 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/04-lab">link</a></p>
+<p><a href="PM566/assignment/04-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/04-visualization/slides.html">link</a></p>
+<p><a href="PM566/slides/04-visualization/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
