--- a/website/content/class/01-class.html
+++ b/website/content/class/01-class.html
@@ -21,18 +21,17 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/01-lab">link</a></p>
-<p><a href="/assignment/pm566-01-lab.zip">Download</a></p>
+<p><a href="assignment/01-lab">link</a></p>
+<p><a href="assignment/pm566-01-lab.zip">Download</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/01-welcome/slides.html">link</a></p>
+<p><a href="slides/01-welcome/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
