--- a/website/content/class/03-class.html
+++ b/website/content/class/03-class.html
@@ -26,11 +26,11 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/03-lab">link</a></p>
+<p><a href="PM566/assignment/03-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/03-exploratory/slides.html">link</a></p>
+<p><a href="PM566/slides/03-exploratory/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
