--- a/website/content/class/06-class.html
+++ b/website/content/class/06-class.html
@@ -21,17 +21,16 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/06-lab">link</a></p>
+<p><a href="PM566/assignment/06-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/06-textmining/slides.html">link</a></p>
+<p><a href="PM566/slides/06-textmining/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
