deploy: efe2566068266a59eb000c63d7147dee4dbe93d8

--- a/class/06-class/index.html
+++ b/class/06-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="  Lab Exercise link
+  <meta name="description" content=" Lab Exercise link
  Slides link
  Links  R tidytext package Text Mining with R Supervised Machine Learning for Text Analysis in R   ">
 
@@ -238,7 +238,7 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/06-class/">
   <meta property="og:title" content="Text mining | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="  Lab Exercise link
+  <meta property="og:description" content=" Lab Exercise link
  Slides link
  Links  R tidytext package Text Mining with R Supervised Machine Learning for Text Analysis in R   "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -561,17 +561,16 @@
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/06-lab">link</a></p>
+<p><a href="PM566/assignment/06-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/06-textmining/slides.html">link</a></p>
+<p><a href="PM566/slides/06-textmining/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
