--- a/class/10-class/index.html
+++ b/class/10-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="  Lab Exercise link
+  <meta name="description" content=" Lab Exercise link
  Slides link
  Links https://www.w3schools.com/sql/
  ">
@@ -239,7 +239,7 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/10-class/">
   <meta property="og:title" content="SQL | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="  Lab Exercise link
+  <meta property="og:description" content=" Lab Exercise link
  Slides link
  Links https://www.w3schools.com/sql/
  "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
@@ -563,17 +563,16 @@
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/10-lab/">link</a></p>
+<p><a href="PM566/assignment/10-lab/">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/10-sql/slides.html">link</a></p>
+<p><a href="PM566/slides/10-sql/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
