--- a/class/01-class/index.html
+++ b/class/01-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="  Lab Exercise link
+  <meta name="description" content=" Lab Exercise link
 Download
  Slides link
  Links  The R Project for Statistical Computing R Studio   ">
@@ -239,7 +239,7 @@ Download
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/01-class/">
   <meta property="og:title" content="Look at Data / Up and Running in R and ggplot | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="  Lab Exercise link
+  <meta property="og:description" content=" Lab Exercise link
 Download
  Slides link
  Links  The R Project for Statistical Computing R Studio   "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
@@ -563,18 +563,17 @@ Download
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/01-lab">link</a></p>
-<p><a href="/assignment/pm566-01-lab.zip">Download</a></p>
+<p><a href="assignment/01-lab">link</a></p>
+<p><a href="assignment/pm566-01-lab.zip">Download</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/01-welcome/slides.html">link</a></p>
+<p><a href="slides/01-welcome/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
