Fixing links across classes

--- a/website/content/class/01-class.html
+++ b/website/content/class/01-class.html
@@ -26,7 +26,7 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/01-lab">link</a></p>
+<p><a href="/PM566/assignment/01-lab">link</a></p>
 <p><a href="/PM566/assignment/pm566-01-lab.zip">Download</a></p>
 </div>
 <div id="slides" class="section level2">
