--- a/class/03-class/index.html
+++ b/class/03-class/index.html
@@ -568,11 +568,11 @@
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="PM566/assignment/03-lab">link</a></p>
+<p><a href="/PM566/assignment/03-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="PM566/slides/03-exploratory/slides.html">link</a></p>
+<p><a href="/PM566/slides/03-exploratory/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
